--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="title">#HackRisques</h1>
-
+      <h1 class="title">#HackRisques : Comment mieux prévenir les risques naturels ? <a class="btn btn-success" href="http://www.developpement-durable.gouv.fr/HackRisques-comment-mieux-prevenir.html">+ d'infos</a></h1>
+      <hr>
       <div class="sidebar col-md-3">
         <div>
           <h4>Jeux de données <span id="total_movies" class="label label-info">0</span></h4>
         </div>
-
         <div>
           <label class="sr-only" for="searchbox">Search</label>
           <input type="text" class="form-control" id="searchbox" placeholder="Search &hellip;" fjs-search>
@@ -208,5 +207,8 @@
 </div>
 
 </script>
+<div class="container">
+<span class="text-muted small">© 2016 - Ministère de l'Environnement, de l'Energie et de la Mer</span>
+</div>
   </body>
 </html>
