--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <div class="caption">
         <h4> <b><%= acronyme %></b> / <%= intitulé %>
         <a target="_blank" class="label label-success" href="<%= lien %>"> <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>Télécharger</a> </h4>
+        <div class="table-responsive">
         <table class="table table-condensed">
         <tr>
           <th>Nature de la donnée</th>
@@ -93,6 +94,7 @@
             <td><%= nombreDeJeuxDeDonnées %></td>
         </tr>
         </table>
+        </div>
         <div class="detail">
           <%= commentaire %>
         </div>
