--- a/index.html
+++ b/index.html
@@ -1,107 +1,131 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8">
-    <link href="assets/css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="assets/css/jquery-ui-1.10.2.custom.min.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="assets/css/stream.css" media="screen" rel="stylesheet" type="text/css">
-    <script src="assets/js/jquery-1.11.3.min.js" type="text/javascript"></script>
-    <script src="assets/js/jquery-ui-1.10.2.custom.min.js" type="text/javascript"></script>
-    <script src="assets/js/filter.min.js" type="text/javascript"></script>
-    <script src="assets/js/mustache.min.js" type="text/javascript"></script>
-    <script src="data/data.js" type="text/javascript"></script>
-    <script src="auto.js" type="text/javascript"></script>
-  </head>
-  <body>
-    <div class="container">
-      <h1 class="title">#HackRisques : Comment mieux prévenir les risques naturels ? <a class="btn btn-success" href="http://www.developpement-durable.gouv.fr/HackRisques-comment-mieux-prevenir.html">+ d'infos</a></h1>
-      <hr>
-      <div class="sidebar col-md-3">
-        <div>
-          <h4>Jeux de données <span id="mydata_count" class="label label-info">0</span></h4>
+<head>
+  <meta charset="UTF-8">
+  <link href="assets/semantic/semantic.min.css" media="screen" rel="stylesheet" type="text/css">
+  <link href="assets/css/mystyle.css" media="screen" rel="stylesheet" type="text/css">
+  <script src="assets/js/jquery-1.11.3.min.js" type="text/javascript"></script>
+  <script src="assets/js/jquery-ui-1.10.2.custom.min.js" type="text/javascript"></script>
+  <script src="assets/js/filter.min.js" type="text/javascript"></script>
+  <script src="assets/js/mustache.min.js" type="text/javascript"></script>
+  <script src="assets/semantic/semantic.min.js" type="text/javascript"></script>
+  <script src="data/data.js" type="text/javascript"></script>
+  <script src="auto.js" type="text/javascript"></script>
+</head>
+<body>
+  <div class="ui hidden divider"></div>
+  <div class="ui container grid">
+    <div class="row ui segment conteneurblue">
+      <div class="two wide column"><img class="ui image" src="assets/img/logo_ministere.png" alt="Logo Ministère"></div>
+      <div class="two wide column"><img class="ui image" src="assets/img/logo_gtv.png" alt="Logo GrrenTech verte" height="75" width="75"></div>
+      <div class="eleven wide column titre">#HackRisques : Comment mieux prévenir les risques naturels ?</div>
+    </div>
+    <div class="row container">
+      <div class="four wide column center aligned">
+        <div class="ui container">
+          <div class="ui container statistic">
+            <div class="value">
+              <span id="mydata_count">0</span>
+            </div>
+            <div class="label">jeux de données</div>
+          </div>
+          <div class="ui container"><a href="http://www.developpement-durable.gouv.fr/HackRisques-comment-mieux-prevenir.html">+ d'infos</a></div>
+          <div class="ui container icon input">
+            <i class="search icon"></i>
+            <input type="text" id="searchbox" placeholder="Chercher&hellip;" fjs-search>
+          </div>
+          <div class="ui container left aligned" id="target">Chargement...</div>
         </div>
-        <div>
-          <label class="sr-only" for="searchbox">Search</label>
-          <input type="text" class="form-control" id="searchbox" placeholder="Chercher &hellip;" fjs-search>
-          <span class="glyphicon glyphicon-search search-icon"></span>
-        </div>
-        <br>
-        <div id="target">Chargement...</div>
-
       </div>
-      <div class="col-md-9">
+      <div class="one wide column"></div>
+      <div class="eleven wide column ui container">
         <div class="movies content row" id="movies" fjs-items="template=#data-template"></div>
       </div>
     </div>
-  </div>
-</div>
-
-<script id="data-template" type="text/html">
-<div class="col-md-12">
-    <div class="thumbnail">
-      <div class="caption">
-        <h4><b><%= acronyme %>/ <%= intitulé %></b> 
-        <div class="right"><a target="_blank" class="label label-success" href="<%= lien %>"> <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span> Télécharger</a></div></h4>
-        <div class="table-responsive">
-        <table class="table table-condensed">
-        <tr>
-          <th>Nature de la donnée</th>
-          <td><%= natureDeLaDonnée %></td>
-          <th>Groupe</th>
-          <td><%= groupe %></td>
-        </tr>
-
-        <tr>
-            <th>Thématique principale</th>
-            <td><%= thématiquePrincipale %></td>
-            <th>Opérateur</th>
-            <td><%= opérateur %></td>
-        </tr>
-        <tr>
-            <th>Mots clefs</th>
-            <td><%= motsClefs %></td>
-            <th>Millésimes proposés</th>
-            <td><%= millésimesProposés %></td>
-        </tr>
-        <tr>
-            <th>Disponibilité des données</th>
-            <td><%= disponibilitéDesDonnées %></td>
-            <th>CGU</th>
-            <td><%= cgu %></td>
-        </tr>
-        <tr>
-            <th>Documentation technique</th>
-            <td><%= documentationTechnique %></td>
-            <th>Documentation méthodologique</th>
-            <td><%= documentationMéthodologique %></td>
-        </tr>
-        <tr>
-            <th>Exemple de réutilisation</th>
-            <td><%= exempleDeRéutilisation %></td>
-            <th>Champ géographique</th>
-            <td><%= champGéographique %></td>
-        </tr>
-        <tr>
-            <th>Maille</th>
-            <td><%= maille %></td>
-            <th>Niveau de restitution</th>
-            <td><%= niveauDeRestitution %></td>
-        </tr>
-        <tr>
-            <th>Format</th>
-            <td><%= format %></td>
-            <th>Nombre de jeux de données</th>
-            <td><%= nombreDeJeuxDeDonnées %></td>
-        </tr>
-        </table>
-        </div>
-        <div class="detail">
-          <%= commentaire %>
-        </div>
+    <div class="row center aligned container">
+      <div class="sixteen wide column">
+        <span class="text-muted small">© 2016 - Ministère de l'Environnement, de l'Energie et de la Mer</span>
       </div>
     </div>
-    </div>
-</script>
+  </body>
+  </html>
+
+  <script id="data-template" type="text/html">
+    <div class="ui raised segment">
+      <p class="ui blue ribbon label"><%= Acronyme %></p><%= Intitulé %>
+      <p></p>
+      <div class="ui two column grid">
+        <div class="column"> 
+          <div class="ui segments">
+            <div class="ui segment">
+              <p>Partenaire : <%= Opérateur %></p>
+            </div>
+            <div class="ui segment">
+              <div class="ui labels"> Thèmes :
+                <% var mywords=Theme.split(';') ; for (index=0;index<mywords.length;++index) { %>
+                <a class="ui label" href="javascript:document.getElementById('searchbox').focus();searchbox.value='<%= mywords[index] %>';FJS.filter();"><%= mywords[index] %></a>
+                <% } %>
+              </div>
+            </div>
+            <div class="ui segment">
+              <p><%= Nature %> | <%= Perimetre %></p>
+            </div>
+            <div class="ui segment">
+              <p>Couverture géo : <%= ChampGéographique %></p>
+            </div>
+            <div class="ui segment">
+              <p><%= NiveauRestitution %></p>
+            </div>
+              <div class="ui segment">
+                <div class="ui labels">
+                  <% var mywords=MotsClefs.split(';') ; for (index=0;index<mywords.length;++index) { %>
+                  <a class="ui label" href="javascript:document.getElementById('searchbox').focus();searchbox.value='<%= mywords[index] %>';FJS.filter();"><%= mywords[index] %></a>
+                  <% } %>
+                </div>
+              </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="ui segments">
+            <div class="ui segment">
+              <p>Disponibilité des données : <%= DisponibilitéDonnées %>
+                <% if (DisponibilitéDonnées=='oui') { %>
+                <a target="_blank" class="label label-success" href="<%= Lien %>"><i class="download icon"></i>Télécharger</a></p>
+                <% } %>
+              </div>
+            <div class="ui segment">
+              <% if(NombreJeuxDonnées) { %><p>Nb de jeux : <%= NombreJeuxDonnées %></p><% } %>
+              <% if(Millésimes) { %><p>Années : <%= Millésimes %></p><% } %>
+            </div>
+              <div class="ui segment">
+                <p><%= CGU %></p>
+              </div>
+              <div class="ui segment">
+                <p>Doc. méthodologique : <%= DocumentationMéthodologique %></p>
+                <p>Doc. technique : <%= DocumentationTechnique %></p>
+              </div>
+              <div class="ui segment">
+                <div class="ui labels">
+                  <% var mywords=Format.split(';') ; if (mywords.length > 1) { %>
+                  Formats : <% for (index=0;index<mywords.length;++index) { %>
+                  <a class="ui label" href="javascript:document.getElementById('searchbox').focus();searchbox.value='<%= mywords[index] %>';FJS.filter();"><%= mywords[index] %></a>
+                  <% }} %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <% if(ExempleRéutilisation) { %>
+        <div class="ui container">
+          <p class="ui tag label"><i class="idea icon"></i>Exemple</p> <%= linkify(ExempleRéutilisation) %>
+        </div>
+        <% } %>
+        <div class="ui container">
+          <%= linkify(Commentaire).replace(/\n/g, "<br />")   %>
+        </div>
+      </div>
+    </script>
+
 <!-- <script id="genre_template" type="text/html">
   <div class="checkbox">
     <label>
@@ -109,108 +133,118 @@
     </label>
   </div>
 </script> -->
+
 <script id="template" type="x-tmpl-mustache">
 
-<div class="well">
-<fieldset id="groupe_criteria">
-<legend>Groupe</legend>
-{{#groupe}}
-<div id="groupe">
-  <div class="checkbox" fjs-criteria="field=groupe,ele=#groupes input:checkbox">
-    <label>
-      <input type="checkbox" value="{{.}}">
-      <span>{{.}}</span>
-    </label>
+  <div class="well">
+    <fieldset id="groupe_criteria">
+      <legend>Périmètre</legend>
+      {{#Perimetre}}
+      <div id="perimetre">
+        <div class="checkbox" fjs-criteria="field=Perimetre,ele=#groupes input:checkbox">
+          <label>
+            <input type="checkbox" value="{{.}}">
+            <span>{{.}}</span>
+          </label>
+        </div>
+      </div>
+      {{/Perimetre}}
+    </fieldset>
   </div>
-</div>
-{{/groupe}}
-</fieldset>
-</div>
 
-<div class="well">
-<fieldset id="cgu_criteria">
-<legend>CGU</legend>
-{{#cgu}}
-<div id="cgu">
-  <div class="checkbox" fjs-criteria="field=cgu,ele=#cgus input:checkbox">
-    <label>
-      <input type="checkbox" value="{{.}}">
-      <span>{{.}}</span>
-    </label>
+  <div class="well">
+    <fieldset id="natureDeLaDonnée_criteria">
+      <legend>Nature de la donnée</legend>
+      {{#Nature}}
+      <div id="natureDeLaDonnée">
+        <div class="checkbox" fjs-criteria="field=Nature,ele=#natureDeLaDonnées input:checkbox">
+          <label>
+            <input type="checkbox" value="{{.}}">
+            <span>{{.}}</span>
+          </label>
+        </div>
+      </div>
+      {{/Nature}}
+    </fieldset>
   </div>
-</div>
-{{/cgu}}
-</fieldset>
-</div>
 
-<div class="well">
-<fieldset id="natureDeLaDonnée_criteria">
-<legend>Nature de la donnée</legend>
-{{#natureDeLaDonnée}}
-<div id="natureDeLaDonnée">
-  <div class="checkbox" fjs-criteria="field=natureDeLaDonnée,ele=#natureDeLaDonnées input:checkbox">
-    <label>
-      <input type="checkbox" value="{{.}}">
-      <span>{{.}}</span>
-    </label>
+  <div class="well">
+    <fieldset id="cgu_criteria">
+      <legend>CGU</legend>
+      {{#CGU}}{{#.}}
+      <div id="cgu">
+        <div class="checkbox" fjs-criteria="field=CGU,ele=#cgus input:checkbox">
+          <label>
+            <input type="checkbox" value="{{.}}">
+            <span>{{.}}</span>
+          </label>
+        </div>
+      </div>
+      {{/.}}{{/CGU}}
+    </fieldset>
   </div>
-</div>
-{{/natureDeLaDonnée}}
-</fieldset>
-</div>
 
-
-<div class="well">
-<fieldset id="champGéographique_criteria">
-<legend>Champ géographique</legend>
-{{#champGéographique}}
-<div id="champGéographique">
-  <div class="checkbox" fjs-criteria="field=champGéographique,ele=#champGéographiques input:checkbox">
-    <label>
-      <input type="checkbox" value="{{.}}">
-      <span>{{.}}</span>
-    </label>
+ <div class="well">
+    <fieldset id="disponibilitéDesDonnées_criteria">
+      <legend>Disponibilité des données</legend>
+      {{#DisponibilitéDonnées}}{{#.}}
+      <div id="disponibilitéDesDonnées">
+        <div class="checkbox" fjs-criteria="field=DisponibilitéDonnées,ele=#disponibilitéDesDonnées input:checkbox">
+          <label>
+            <input type="checkbox" value="{{.}}">
+            <span>{{.}}</span>
+          </label>
+        </div>
+      </div>
+      {{/.}}{{/DisponibilitéDonnées}}
+    </fieldset>
   </div>
-</div>
-{{/champGéographique}}
-</fieldset>
-</div>
 
-<div class="well">
-<fieldset id="maille_criteria">
-<legend>Maille</legend>
-{{#maille}}
-<div id="maille">
-  <div class="checkbox" fjs-criteria="field=maille,ele=#mailles input:checkbox">
-    <label>
-      <input type="checkbox" value="{{.}}">
-      <span>{{.}}</span>
-    </label>
+  <div class="well">
+    <fieldset id="champGéographique_criteria">
+      <legend>Champ géographique</legend>
+      {{#ChampGéographique}}{{#.}}
+      <div id="champGéographique">
+        <div class="checkbox" fjs-criteria="field=ChampGéographique,ele=#champGéographiques input:checkbox">
+          <label>
+            <input type="checkbox" value="{{.}}">
+            <span>{{.}}</span>
+          </label>
+        </div>
+      </div>
+      {{/.}}{{/ChampGéographique}}
+    </fieldset>
   </div>
-</div>
-{{/maille}}
-</fieldset>
-</div>
 
-<div class="well">
-<fieldset id="niveauDeRestitution_criteria">
-<legend>Niveau de restitution</legend>
-{{#niveauDeRestitution}}
-<div id="niveauDeRestitution">
-  <div class="checkbox" fjs-criteria="field=niveauDeRestitution,ele=#niveauDeRestitutions input:checkbox">
-    <label>
-      <input type="checkbox" value="{{.}}">
-      <span>{{.}}</span>
-    </label>
+  <div class="well">
+    <fieldset id="maille_criteria">
+      <legend>Maille</legend>
+      {{#Maille}}{{#.}}
+      <div id="maille">
+        <div class="checkbox" fjs-criteria="field=Maille,ele=#mailles input:checkbox">
+          <label>
+            <input type="checkbox" value="{{.}}">
+            <span>{{.}}</span>
+          </label>
+        </div>
+      </div>
+      {{/.}}{{/Maille}}
+    </fieldset>
   </div>
-</div>
-{{/niveauDeRestitution}}
-</fieldset>
-</div>
 
+  <div class="well">
+    <fieldset id="niveauDeRestitution_criteria">
+      <legend>Niveau de restitution</legend>
+      {{#NiveauRestitution}}{{#.}}
+      <div id="NiveauRestitution">
+        <div class="checkbox" fjs-criteria="field=NiveauRestitution,ele=#niveauDeRestitutions input:checkbox">
+          <label>
+            <input type="checkbox" value="{{.}}">
+            <span>{{.}}</span>
+          </label>
+        </div>
+      </div>
+      {{/.}}{{/NiveauRestitution}}
+    </fieldset>
+  </div>
 </script>
-<div class="container">
-<span class="text-muted small">© 2016 - Ministère de l'Environnement, de l'Energie et de la Mer</span>
-</div>
-  </body>
-</html>
